<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardBackgroundColor="?cardBackgroundColor"
        app:cardElevation="@dimen/card_elevation_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_xx_small"
            android:layout_marginTop="@dimen/margin_xxx_large"
            android:layout_marginEnd="@dimen/margin_xx_small"
            android:layout_marginBottom="@dimen/margin_xx_small" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCoin"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:contentDescription="@string/coin_symbol"
                android:src="@drawable/bitcoin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/default_dollars"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivCoin"
                app:layout_constraintTop_toBottomOf="@+id/ivCoin" />

            <ImageView
                android:id="@+id/ivGoDetail"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:contentDescription="@string/coin_symbol"
                android:src="@drawable/navigate_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?iconTint" />

            <TextView
                android:id="@+id/tvSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/default_coin"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivCoin"
                app:layout_constraintStart_toEndOf="@+id/ivCoin"
                app:layout_constraintTop_toTopOf="@+id/ivCoin" />

            <TextView
                android:id="@+id/tvPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xx_large"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/tv_background"
                android:backgroundTint="@color/app_green"
                android:padding="@dimen/padding_x_small"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/default_per"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>